# nova

./: CMakeLists.txt  Makefile  README.md
include/nova/: codegen.h  gc.h  semantic.h  token.h
src/: ast.cpp  codegen.c  codegen.cpp  diagnostic.cpp  gc.c  gc.cpp  ir.cpp  lexer.c  lexer.cpp  parser.cpp  semantic.c  semantic.cpp  token.c  token.cpp
tests/: parser_tests.c  parser_tests.cpp
tools/: nova_check.c  nova_check.cpp  nova_fmt.cpp  nova_lsp.cpp  nova_new.cpp  nova_repl.cpp
